# SimpleVideoConvolution

./: CMakeLists.txt  README.md  main.cpp
